syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc cadastrarChavePix(CadastraChavePixRequest) returns(CadastraChavePixResponse);
}

service RemoveChaveGrpcService {
  rpc removeChavePix(RemoveChavePixRequest) returns(RemoveChavePixResponse);
}

message RemoveChavePixRequest {
int64 idPix = 1;
string idCliente = 2;
}

message RemoveChavePixResponse {
string mensagem = 1;
}

enum TipoChave {
  CPF = 0;
  TELEFONE_CELULAR = 1;
  EMAIL = 2;
  CHAVE_ALEATORIA = 3;
}

enum TipoConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message CadastraChavePixRequest {
  string idCliente = 1;
  TipoChave tipoChave = 2;
  string valorChave = 3;
  TipoConta tipoConta = 4;
}

message CadastraChavePixResponse {
  int64 idPix = 1;
}